changed index.html again

--- a/index.html
+++ b/index.html
@@ -187,7 +187,21 @@
                         </div>
                     </div>
                     
+                    <div class="container">
 
+                        
+                        <div class="section justify-content-center" id="gooth" align="center">
+                            <h1 id="gooth-title" align="center">Gooth.</h1>
+                            <p align="center">January 16th, 2017</p>
+                            <p>This was the date when I uploaded my first video on YouTube. I had a snow day from school and I decided, on a whim, to post a tutorial for a card flourish that I barely knew how to do. It was a relatively mediocre video and it was not a very good tutorial either. But I was proud of it because it was my first attempt at creating cinematic content. Even since that day, "Gooth" has been a journal of sorts; a way for me to document my journey through filmmaking. Below are some of my best videos. There is certainly much room for improvement but these are the works I am most proud of.</p>
+                            <h4 align="center">friends.</h4>
+                            <iframe width="560" height="315"  align="center" src="https://www.youtube.com/embed/TFQ3SgCggR4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            <h4 align="center">no excuses.</h4>
+                            <iframe width="560" height="315" align="center" src="https://www.youtube.com/embed/VO0Gy7CqXWE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            <h4 align="center">local hack day.</h4>
+                            <iframe align="center" width="560" height="315" src="https://www.youtube.com/embed/V3fJSksrOSo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
