--- a/photography.html
+++ b/photography.html
@@ -240,7 +240,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Here are some of the photographs I’ve takend over the past few months.</p>
+<p>Here are some of the photographs I’ve taken over the past few months.</p>
 <p><em>Camera:</em> Sony a6300</p>
 <p><img src="images/blurry.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="right"> <img src="images/week4-13.JPG" style="width:25%; border:10px solid; margin-right: 20px" align="right"> <img src="images/fire%20hydrant.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="right"></p>
 
